GPencil – Shear Tool Misses Orientation/Can't Shear Along X in Default Setup #76974

Closed
opened 2020-05-22 16:03:57 +02:00 by ronsn · 6 comments

System Information
Operating system: Linux-5.3.0-51-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21

Blender Version
Broken: version: 2.90 (sub 2), branch: master, commit date: 2020-05-22 12:42, hash: 920b698746
Worked: branch: master, commit date: Thu May 21 10:57:35 2020 -0300 de7d32bb7d
Short description of error
Shearing does not work for 2D Animation since a39ca327bc

Bisecting gave me:
a39ca327bc is the first bad commit

Exact steps for others to reproduce the error

  1. Open Blender and select 2D Animation on the Splash Screen
  2. Draw something like a square
  3. Press Tab to change into Edit Mode
  4. Select the Shear Tool, or press Ctrl+Shift+Alt+S => Nothing changes
  5. Press Y while in Camera View/or Perspective View => Shears along global y axis (it seems)
  6. Press Y while in Front View (not in Camera View!) => Nothing changes

––––––––––––––––––––––

Have a nice day 🙂

**System Information** Operating system: Linux-5.3.0-51-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 **Blender Version** Broken: version: 2.90 (sub 2), branch: master, commit date: 2020-05-22 12:42, hash: `920b698746` Worked: branch: master, commit date: Thu May 21 10:57:35 2020 -0300 de7d32bb7d **Short description of error** Shearing does not work for 2D Animation since a39ca327bc Bisecting gave me: a39ca327bc8491129d9794d136b39a6ba8cd6ffa is the first bad commit **Exact steps for others to reproduce the error** 1. Open Blender and select 2D Animation on the Splash Screen 2. Draw something like a square 3. Press *Tab* to change into *Edit Mode* 4. Select the Shear Tool, or press `Ctrl`+`Shift`+`Alt`+`S` => Nothing changes 5. Press `Y` while in Camera View/or Perspective View => Shears along global y axis (it seems) 6. Press `Y` while in Front View (not in Camera View!) => Nothing changes –––––––––––––––––––––– Have a nice day 🙂
Author

Added subscriber: @ronsn

Added subscriber: @ronsn

Added subscribers: @mano-wii, @antoniov

Added subscribers: @mano-wii, @antoniov

@mano-wii Could you take a look? it looks the commit above is the reason.

Maybe you need check if the object type is MESH or GPENCIL.

@mano-wii Could you take a look? it looks the commit above is the reason. Maybe you need check if the object type is MESH or GPENCIL.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Germano Cavalcante self-assigned this 2020-05-22 17:35:05 +02:00

This issue was referenced by cbd4b8ebb0

This issue was referenced by cbd4b8ebb054cacb97485b9e20e09c2bf3a34659

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76974
No description provided.