Fix T76974: Shear Tool Misses Orientation